# pink-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  setup.sh
src/pink_agent/: __init__.py  config.py
src/pink_agent/claude/: __init__.py  agent.py  compact.py  executor.py  output.py  parser.py  processor.py  sessions.py
src/pink_agent/cli/: __init__.py  send.py
src/pink_agent/daemon/: singleton.py  supervisor.py
src/pink_agent/queue/: storage.py  watcher.py
src/pink_agent/telegram/: agent.py  commands.py  files.py  output.py  receiver.py  sender.py  transcriber.py
templates/: CLAUDE.md.example
templates/claude-commands/: summarize.md
